added pic credits to main page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 								<div class="img-wrapper">
 									<img src="{{ item.project.logo | prepend: site.baseurl }}" alt="{{ item.project.title }}" />
 								</div>
+								<span class="h4">{{ item.project.logo-cc }}</span>
 								<span class="h2">{{ item.project.type }}</span>
 								<h3>{{ item.project.title }}</h3>
 							</a>
